fixed crewmate interline spacing for more items

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -136,8 +136,8 @@ html {
 
 
 .crewmatelist > li {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   border-bottom: solid 1px rgb(214, 214, 214);
 }
 
